--- a/app/views/home.html
+++ b/app/views/home.html
@@ -60,9 +60,9 @@
                 <form class="form-horizontal" autofill-submit="login()" ui-keypress="{13:'Login($event)'}">
                     <fieldset>
                         <input class="input-large col-xs-12" ng-model="loginUser.username" name="username" type="text"
-                               placeholder="用户名" required/>
+                               placeholder="用户名" style="color: #000000!important;" required/>
                         <input class="input-large col-xs-12" ng-model="loginUser.password" name="password"
-                               type="password" placeholder="密码" required/>
+                               type="password" placeholder="密码" style="color: #000000!important;" required/>
                         <div class="clearfix"></div>
                         <div class="clearfix"></div>
                         <button type="submit" class="btn btn-primary col-xs-5" ng-click="Login()">登录</button>
