minor bug fix: 解决Dashboard中销售额在连续两天以上没有销售额时的显示错误

--- a/app/views/analysis/dashboard.html
+++ b/app/views/analysis/dashboard.html
@@ -40,7 +40,7 @@
                             <tr style="height: 20px"></tr>
                             <tr><td style="text-align: center"><h1 class="text-danger" ng-click="showStat = !showStat" style="font-weight: bold; font-family: Arial; font-size: 48px;">{{skusNum}}</h1></td>
                             </tr>
-                            <tr style="height: 20px"><td style="text-align: right"><h2 class="text-danger"><i style="color: green" class="fa fa-arrow-up fa-1x"></i></h2> </td>
+                            <tr style="height: 20px"><td style="text-align: right"><h2 class="text-danger"><i style="color: white" class="fa fa-arrow-up fa-1x"></i></h2> </td>
                             </tr>
                         </table>
                     </div>
