--- a/app/views/home.html
+++ b/app/views/home.html
@@ -67,7 +67,7 @@
                         <div class="clearfix"></div>
                         <button type="submit" class="btn btn-primary col-xs-5">登录</button>
                         <div class="col-xs-2"></div>
-                        <button class="btn btn-default col-xs-5" ng-click="registerWizard()">注册</button>
+                        <button type="button" class="btn btn-default col-xs-5" ng-click="registerWizard()">注册</button>
                     </fieldset>
                 </form>
                 <alert type="alert.type" ng-hide="!alert">{{alert.msg}}</alert>
