--- a/app/views/home.html
+++ b/app/views/home.html
@@ -7,51 +7,42 @@
 
             <script type="text/ng-template" id="myModalContent.html">
                 <div class="modal-header" style="background-color: #36a9e1">
-                    <h1 class="text-center" style="color: #ffffff">新用户注册</h1>
+                    <h1 class="text-center" style="color: #ffffff">加入泛商汇</h1>
                 </div>
                 <div class="modal-body">
-                    <form role="form" >
-                        <div class="form-group col-lg-6">
-                            <label>手机号*</label>
-                            <label style="color: red">{{userNameErrMess}}</label>
-                            <input type="number" ng-model="registerUser.username" class="form-control" required="true">
+                    <form class="form-horizontal" role="form" >
+                        <div class="form-group" style="margin-top:20px">
+                            <label class="col-sm-2 control-label">手机号</label>
+                              <div class="col-sm-10">
+                              <input type="number" ng-model="registerUser.username" class="form-control" required="true" placeholder="请输入真实号码" style="color: #000000!important">
+                              <label style="color: red; text-align: center;">{{userNameErrMess}}</label>
+                              </div>
                         </div>
-                        <div class="form-group col-lg-6">
-                            <label>密码*</label>
-                            <label style="color: red">{{passwordErrMess}}</label>
-                            <input type="password" ng-model="registerUser.password" class="form-control" required="true">
-                        </div>
-                        <div class="form-group col-lg-6">
-                            <label>再次输入密码*</label>
-                            <label style="color: red">{{repasswordErrMess}}</label>
-                            <input type="password" ng-model="registerUser.repassword" class="form-control" required="true">
-                        </div>
-                        <div class="form-group col-lg-6">
-                            <label>姓名*</label>
-                            <input type="text" ng-model="registerUser.displayName" class="form-control" required="true">
-                        </div>
-                        <div class="form-group col-lg-6">
-                            <label>身份证</label>
-                            <label style="color: red">{{idcardErrMess}}</label>
-                            <input type="number" ng-model="registerUser.idcard" class="form-control">
-                        </div>
-                        <div class="form-group col-lg-6">
-                            <label>邮箱</label>
-                            <input type="email" ng-model="registerUser.email" class="form-control">
-                        </div>
-                        <div class="form-group col-lg-6">
-                            <label>性别</label><br>
-                            <div class="btn-group" style="text-align: right">
-                                <button type="button" class="btn btn-primary" ng-model="registerUser.male" btn-radio="true">男</button>
-                                <button type="button" class="btn btn-danger" ng-model="registerUser.male" btn-radio="false">女</button>
+                        <div class="form-group" style="margin-top:20px">
+                            <label class="col-sm-2 control-label">姓名</label>
+                            <div class="col-sm-10">
+                            <input type="text" ng-model="registerUser.displayName" class="form-control" required="true" placeholder="请输入真实姓名" style="color: #000000!important">
+                            <label style="color: red">{{displayNameErrMess}}</label>
                             </div>
                         </div>
-                        <div class="form-group col-lg-6" style="text-align: right">
-                            <button type="submit" class="btn btn-primary col-xs-12" ng-click="ok()">注册</button>
+                        <div class="form-group" style="margin-top:20px">
+                            <label class="col-sm-2 control-label">设置密码</label>
+                            <div class="col-sm-10">
+                            <input type="password" ng-model="registerUser.password" class="form-control" required="true" placeholder="请输入密码" style="color: #000000!important">
+                            <label style="color: red">{{passwordErrMess}}</label>
+                            </div>
+                        </div>
+                        <div class="form-group" style="margin-top:20px">
+                            <label class="col-sm-2 control-label">确认密码</label>
+                              <div class="col-sm-10">
+                              <input type="password" ng-model="registerUser.repassword" class="form-control" required="true" placeholder="请确认密码" style="color: #000000!important">
+                              <label style="color: red">{{repasswordErrMess}}</label>
+                              </div>
+                        </div>
+                        <div class="form-group" style="margin-bottom: 20px">
+                            <button type="submit" class="btn btn-primary col-xs-12" ng-click="ok()">手机注册</button>
                         </div>
                     </form>
-                    <br>
-                    <p style="padding-left: 15px">* 标注为必填项 </p>
                 </div>
 
             </script>
