--- a/app/views/home.html
+++ b/app/views/home.html
@@ -21,8 +21,8 @@
                         <div class="form-group" style="margin-top:20px">
                             <label class="col-sm-2 control-label">姓名</label>
                             <div class="col-sm-10">
-                            <input type="text" ng-model="registerUser.displayName" class="form-control" required="true" placeholder="请输入真实姓名" style="color: #000000!important">
-                            <label style="color: red">{{displayNameErrMess}}</label>
+                            <input type="text" ng-model="registerUser.name" class="form-control" required="true" placeholder="请输入真实姓名" style="color: #000000!important">
+                            <label style="color: red">{{nameErrMess}}</label>
                             </div>
                         </div>
                         <div class="form-group" style="margin-top:20px">
