--- a/app/views/home.html
+++ b/app/views/home.html
@@ -14,7 +14,7 @@
                         <div class="form-group" style="margin-top:20px">
                             <label class="col-sm-2 control-label">手机号</label>
                               <div class="col-sm-10">
-                              <input type="number" ng-model="registerUser.username" class="form-control" required="true" placeholder="请输入真实号码" style="color: #000000!important">
+                              <input type="text" ng-model="registerUser.username" class="form-control" required="true" placeholder="请输入真实号码" style="color: #000000!important">
                               <label style="color: red; text-align: center;">{{userNameErrMess}}</label>
                               </div>
                         </div>
