--- a/app/views/item/create.html
+++ b/app/views/item/create.html
@@ -22,7 +22,7 @@
             <label class="col-lg-2 control-label">类别：</label>
 
             <div class="col-lg-6">
-                <input class="form-control" type="text" ng-model="entity.tags" required>
+                <input typeahead="tag for tag in merchantItemTags | filter:$viewValue" class="form-control" type="text" ng-model="entity.tags" required>
             </div>
         </div>
         <div class="form-group">
