--- a/app/views/item/edit.html
+++ b/app/views/item/edit.html
@@ -9,13 +9,61 @@
 </div>
 <div class="box-content">
     <form class="form-horizontal" role="form" name="editForm">
-        <div class="form-group" ng-repeat="field in profileFields"
-             ng-if="!field.hide">
-            <div class="form-group">
-                <label class="col-lg-2 control-label">{{field.title}}：</label>
-
-                <div class="col-lg-6">
-                    <input class="form-control" type="text" ng-model="entity[field.name]" required>
+        <div class="form-group">
+            <label class="col-lg-2 control-label"></label>
+            <span class="help-block"><i class="fa fa-circle"> 标记的项目不能为空</i></span>
+        </div>
+        <div class="form-group">
+            <label class="col-lg-2 control-label">品名</label>
+            <div class="col-lg-6">
+                <div class="input-group">
+                    <input class="form-control" name="name" type="text" ng-model="entity.name">
+                    <span class="input-group-addon"><i class="fa fa-circle"></i></span>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-lg-2 control-label">型号</label>
+            <div class="col-lg-6">
+                <div class="input-group">
+                    <input class="form-control" name="model" type="text" ng-model="entity.model">
+                    <span class="input-group-addon"><i class="fa fa-circle-o"></i></span>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-lg-2 control-label">售价/元</label>
+            <div class="col-lg-6">
+                <div class="input-group">
+                    <input class="form-control" name="price" type="text" ng-model="entity.price">
+                    <span class="input-group-addon"><i class="fa fa-circle"></i></span>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-lg-2 control-label">类别</label>
+            <div class="col-lg-6">
+                <div class="input-group">
+                    <input class="form-control" name="tags" type="text" ng-model="entity.tags">
+                    <span class="input-group-addon"><i class="fa fa-circle-o"></i></span>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-lg-2 control-label">描述</label>
+            <div class="col-lg-6">
+                <div class="input-group">
+                    <input class="form-control" name="desc" type="text" ng-model="entity.desc">
+                    <span class="input-group-addon"><i class="fa fa-circle-o"></i></span>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-lg-2 control-label">状态</label>
+            <div class="col-lg-10">
+                <div class="btn-group">
+                    <button type="button" class="btn btn-success" ng-model="entity.status" btn-radio="'sale'">上架</button>
+                    <button type="button" class="btn btn-warning" ng-model="entity.status" btn-radio="'desale'">下架</button>
                 </div>
             </div>
         </div>
