Add 订单的列表显示及详情，Fixed 详情、编辑页面状态下，点击左侧菜单能够跳转列表界面

--- a/app/views/shop/edit.html
+++ b/app/views/shop/edit.html
@@ -42,7 +42,7 @@
     <label class="col-lg-2 control-label">打印机</label>
     <div class="col-lg-6">
         <div class="input-group">
-            <input class="form-control" name="printers" type="text" ng-model="entity.printers">
+            <input class="form-control" name="printers" type="text" ng-model="entity.printers" tooltip="多个打印机号，填写时请以英文逗号分隔">
             <span class="input-group-addon" style="cursor: pointer;" ng-click="addPrinter()"><i class="fa fa-plus"></i></span>
         </div>
     </div>
