--- a/app/views/basicList.html
+++ b/app/views/basicList.html
@@ -169,9 +169,17 @@
           </td>
           <td class="center" ng-repeat="field in fields" ng-show="!field.listHide"
               style="vertical-align: middle;width: {{percent}}%">
-            <span ng-class="entity.fieldClass[field.name]" ng-if="field.value">{{field.value(entity)}}</span>
+            <span ng-class="entity.fieldClass[field.name]" ng-if="field.value">{{field.value(entity) | limitTo:20}}
+                <span ng-if="(entity[field.name]).length>20">
+                    ...
+                </span>
+            </span>
             <span ng-class="entity.fieldClass[field.name]"
-                  ng-if="!field.value">{{valueOfKeyString(entity, field.name)}}</span>
+                  ng-if="!field.value">{{valueOfKeyString(entity, field.name) | limitTo:20}}
+                <span ng-if="(entity[field.name]).length>20">
+                    ...
+                </span>
+            </span>
           </td>
         </tr>
         <!--END: list all datas for table-->
