Fixed: 商品分类编辑时出错，就商品无法上传图片 Close #273

--- a/app/views/item/edit.html
+++ b/app/views/item/edit.html
@@ -44,7 +44,7 @@
             <label class="col-lg-2 control-label">类别</label>
             <div class="col-lg-6">
                 <div class="input-group">
-                    <input class="form-control" name="tags" type="text" ng-model="entity.tags">
+                    <input class="form-control" name="tags" type="text" ng-model="entity.tags[0]">
                     <span class="input-group-addon"><i class="fa fa-circle-o"></i></span>
                 </div>
             </div>
