--- a/app/views/shop/profile.html
+++ b/app/views/shop/profile.html
@@ -56,7 +56,7 @@
         <div class="col-lg-2"></div>
         <div class="col-lg-8">
             <div id="map" style="height: 500px; width: 800px;"></div>
-            <div ng-init="initMap()"></div>
+            <div ng-init="initMap('no')"></div>
         </div>
     </div>
     <div class="clearfix"></div>
