--- a/app/views/home.html
+++ b/app/views/home.html
@@ -25,6 +25,13 @@
                             <label style="color: red">{{nameErrMess}}</label>
                             </div>
                         </div>
+						<div class= "form-group" style= "margin-top:20px">
+							<label class= "col-sm-2 control-label">身份证号</label>
+							<div class= "col-sm-10">
+								<input type= "text" ng-model= "registerUser.idcard" class= "form-control" required= "true" placeholder= "请输入真实的身份证号码" style="color: #000000!important">
+		                            <label style= "color: red">{{idcardErrMess}}</label>
+		                            </div>
+		                        </div>
                         <div class="form-group" style="margin-top:20px">
                             <label class="col-sm-2 control-label">设置密码</label>
                             <div class="col-sm-10">
