--- a/app/views/orders/profile.html
+++ b/app/views/orders/profile.html
@@ -20,7 +20,6 @@
     <div class="col-lg-12">
         <div class="col-lg-1 col-md-2 col-xs-6"/>
         <div class="col-lg-1 col-md-2 col-xs-6" ng-show="profileAvatar">
-            <img ng-src={{profileAvatar}} alt="Avatar" class="img-circle">
         </div>
         <div class="col-lg-8 col-md-10 col-xs-12">
             <table class="table table-striped table-hover">
@@ -39,7 +38,7 @@
                         </div>
                         <div class="row" ng-repeat="obj in entity.memo">
                             <div class="col-lg-3"><h4>{{obj.name}}</h4></div>
-                            <div class="col-lg-3"><h4>{{obj.createdAt}}</h4></div>
+                            <div class="col-lg-3"><h4>{{obj.createdAt*1000|date:'yyyy-MM-dd HH:mm:ss' }}</h4></div>
                             <div class="col-lg-3"><h4>{{obj.message}}</h4></div>
                         </div>
                     </td>
