--- a/app/views/basicList.html
+++ b/app/views/basicList.html
@@ -84,7 +84,12 @@
       <div class="col-lg-3"></div>
       <!--START: operator for search-->
       <div class="col-lg-3">
-        <form class="form-search">
+      <div class="btn-group" ng-if="isBtnGroup">
+          <div style="display: inline" ng-repeat="btn in btns">
+              <button type="button" class="btn btn-primary" ng-click="filter(btn.key)">{{btn.value}}</button>
+          </div>
+      </div>
+        <form class="form-search" ng-if="!isBtnGroup">
           <div class="input-group">
             <input class="form-control" type="search" ng-model="search.text" tooltip="{{searchOptions.tooltip}}"
                    tooltip-trigger="focus">
