Update：设备挂靠优化
close #299

--- a/app/views/devices/register.html
+++ b/app/views/devices/register.html
@@ -21,7 +21,7 @@
       </div>
     </div>
     <hr>
-    <div ng-include="editView" />
+    <!-- <div ng-include="editView" /> -->
     <div class="form-group">
       <label class="col-lg-2 control-label">新编号</label>
       <div class="col-lg-6">
