Add 商品标签管理(查看，新增，删除) Close #257

--- a/app/views/item/create.html
+++ b/app/views/item/create.html
@@ -12,7 +12,7 @@
     <form class="form-horizontal" role="form" name="addForm">
         <div class="form-group" ng-hide="field.createHide">
 
-            <label class="col-lg-2 control-label">菜名：</label>
+            <label class="col-lg-2 control-label">品名：</label>
 
             <div class="col-lg-6">
                 <input class="form-control" type="text" ng-model="entity.name" required>
