--- a/app/views/item/create.html
+++ b/app/views/item/create.html
@@ -96,7 +96,7 @@
             </div>
             <div class="form-group">
                 <div class="col-lg-offset-2 col-lg-6">
-                    <button type="button" class="btn btn-success btn-s" ng-click="uploader.uploadAll()" ng-disabled="!uploader.getNotUploadedItems().length">
+                    <button type="button" class="btn btn-success btn-s" ng-click="uploadInCreate()" ng-disabled="!uploader.getNotUploadedItems().length">
                         <i class="fa fa-cloud-upload"></i>上传
                     </button>
                 </div>
