--- a/app/views/home.html
+++ b/app/views/home.html
@@ -4,76 +4,117 @@
             <div class="page-header" >
                 <h1 class="text-center text-primary"><img src="img/logo.png" alt="泛商汇RMS">  <small>零售管理系统</small></h1>
             </div>
-
-            <script type="text/ng-template" id="myModalContent.html">
-                <div class="modal-header" style="background-color: #36a9e1">
-                    <h1 class="text-center" style="color: #ffffff">加入泛商汇</h1>
+            <div class="container" style="margin-top: 50px">
+                <div class="row">
+                    <div class="row">
+                        <div class="login-box">
+                            <h2 style="font-size: 24px; color: #008000">登录</h2>
+                            <hr/>
+                            <form novalidate method="post" name="login_form" class="form-horizontal wt-form" id="form" ng-submit="Login()"  ui-keypress="{13:'Login($event)'}" form-autofill-fix>
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <span class="input-group-addon"><i class="fa fa-user fa-lg"></i></span>
+                                        <input class="form-control" ng-model="loginUser.username" name="username" type="text"
+                                               placeholder="用户名" style="color: #000000!important;margin-top: 0px; margin-bottom: 0px" required/>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <span class="input-group-addon"><i class="fa fa-lock fa-lg" style="width: 15px"></i></span>
+                                        <input class="form-control" ng-model="loginUser.password" name="password"
+                                               type="password" placeholder="密码" style="color: #000000!important;margin-top: 0px; margin-bottom: 0px" required/>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-lg-6" style="text-align: center">
+                                        <button type="submit" class="btn btn-primary btn-lg"  style="display: inline-block;;width: 100%;padding-top: 8px!important; padding-bottom: 8px!important;">登录</button>
+                                    </div>
+                                    <div class="col-lg-6" style="text-align: center">
+                                        <button type="button" class="btn btn-success btn-lg" ng-click="openRegModal()"  style="display: inline-block;width: 100%;padding-top: 8px!important; padding-bottom: 8px!important;">注册</button>
+                                    </div>
+                                    <!--<div class="col-lg-6" style="text-align: center">-->
+                                        <!--<a href="/reg" class="btn btn-success btn-lg" >注册</a>-->
+                                    <!--</div>-->
+                                </div>
+                                <hr>
+                                <div class="row" ng-show="alert">
+                                    <div class="col-lg-12" style="text-align: center;">
+                                        <div ng-class="alert.class"><span ng-bind="alert.msg"></span></div>
+                                    </div>
+                                </div>
+                                <p class="text-center"> 泛盈科技 @2013</p>
+                            </form>
+                        </div>
+                    </div>
                 </div>
-                <div class="modal-body">
-                    <form class="form-horizontal" role="form" >
-                        <div class="form-group" style="margin-top:20px">
-                            <label class="col-sm-2 control-label">手机号</label>
-                              <div class="col-sm-10">
-                              <input type="text" ng-model="registerUser.username" class="form-control" required="true" placeholder="请输入真实号码" style="color: #000000!important">
-                              <label style="color: red; text-align: center;">{{userNameErrMess}}</label>
-                              </div>
-                        </div>
-                        <div class="form-group" style="margin-top:20px">
-                            <label class="col-sm-2 control-label">姓名</label>
-                            <div class="col-sm-10">
-                            <input type="text" ng-model="registerUser.name" class="form-control" required="true" placeholder="请输入真实姓名" style="color: #000000!important">
-                            <label style="color: red">{{nameErrMess}}</label>
-                            </div>
-                        </div>
-						<div class= "form-group" style= "margin-top:20px">
-							<label class= "col-sm-2 control-label">身份证号</label>
-							<div class= "col-sm-10">
-								<input type= "text" ng-model= "registerUser.idcard" class= "form-control" required= "true" placeholder= "请输入真实的身份证号码" style="color: #000000!important">
-		                            <label style= "color: red">{{idcardErrMess}}</label>
-		                            </div>
-		                        </div>
-                        <div class="form-group" style="margin-top:20px">
-                            <label class="col-sm-2 control-label">设置密码</label>
-                            <div class="col-sm-10">
-                            <input type="password" ng-model="registerUser.password" class="form-control" required="true" placeholder="请输入密码" style="color: #000000!important">
-                            <label style="color: red">{{passwordErrMess}}</label>
-                            </div>
-                        </div>
-                        <div class="form-group" style="margin-top:20px">
-                            <label class="col-sm-2 control-label">确认密码</label>
-                              <div class="col-sm-10">
-                              <input type="password" ng-model="registerUser.repassword" class="form-control" required="true" placeholder="请确认密码" style="color: #000000!important">
-                              <label style="color: red">{{repasswordErrMess}}</label>
-                              </div>
-                        </div>
-                        <div class="form-group" style="margin-bottom: 20px">
-                            <button type="submit" class="btn btn-primary col-xs-12" ng-click="ok()">手机注册</button>
-                        </div>
-                    </form>
-                </div>
-
-            </script>
-            <div class="login-box">
-                <h2>{{loginTitle}}</h2>
-                <form class="form-horizontal" ng-submit="Login()" ui-keypress="{13:'Login($event)'}" form-autofill-fix>
-                    <fieldset>
-                        <input class="input-large col-xs-12" ng-model="loginUser.username" name="username" type="text"
-                               placeholder="用户名" style="color: #000000!important;" required/>
-                        <input class="input-large col-xs-12" ng-model="loginUser.password" name="password"
-                               type="password" placeholder="密码" style="color: #000000!important;" required/>
-                        <div class="clearfix"></div>
-                        <div class="clearfix"></div>
-                        <button type="submit" class="btn btn-primary col-xs-5">登录</button>
-                        <div class="col-xs-2"></div>
-                        <button type="button" class="btn btn-default col-xs-5" ng-click="registerWizard()">注册</button>
-                    </fieldset>
-                </form>
-                <alert type="alert.type" ng-hide="!alert">{{alert.msg}}</alert>
-                <hr>
-                <p class="text-center"> 泛盈科技 @2013</p>
             </div>
         </div>
         <!--/row-->
     </div>
     <!--/fluid-row-->
 </div><!--/.fluid-container-->
+<style>
+    .modal-content {
+        margin-top: 185px;
+    }
+</style>
+<!--Start: Modal for reg-->
+<script type="text/ng-template" id="regModal.html">
+    <div style="">
+    <div class="modal-header" style="">
+        <h2 style="font-size: 24px; color: #008000">注册</h2>
+    </div>
+    <div class="modal-body" style="margin: 0px;padding: 0px;">
+        <div class="login-box" style="width: 550px;margin: 0 auto;padding: 0px;">
+            <form ng-model="regUser" novalidate method="post" name="register_form" class="form-horizontal wt-form" ng-submit="ok()"  ui-keypress="{13:'ok($event)'}" id="form">
+                <div class="form-group">
+                    <label class="col-lg-3 control-label" style="font-size: 16px;">用户名：</label>
+
+                    <div class="col-lg-9">
+                        <input class="form-control" type="text" placeholder="请输入您的手机号"
+                               name="name" ng-model="regUser.username" style="color: #555!important;"
+                               required/>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-lg-3 control-label" style="font-size: 16px;">身份证号码：</label>
+                    <div class="col-lg-9">
+                        <input class="form-control" ng-model="regUser.idcard" style="color: #555!important;" type="text" placeholder="请输入您的身份证号码"
+                                 required/>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-lg-3 control-label" style="font-size: 16px;">密码：</label>
+                    <div class="col-lg-9">
+                        <input class="form-control" style="color: #555!important;" type="password" placeholder="请输入密码"
+                               name="password"  id="p1" ng-model="regUser.password"
+                               required/>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-lg-3 control-label" style="font-size: 16px;">重复密码：</label>
+                    <div class="col-lg-9">
+                        <input class="form-control" style="color: #555!important;" type="password" placeholder="再输入一次"
+                               name="password-repeat" id="p2"
+                               ng-model="regUser.password_r" required/>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="" style="margin: 0 auto; text-align: center;">
+                        <button type="submit" class="btn btn-primary btn-lg" style="border-radius:10px;" ng-click="">确定</button>
+                        <button type="button" class="btn btn-warning btn-lg" style="border-radius:10px;" ng-click="cancel()">取消</button>
+                    </div>
+                </div>
+                <!--START: div for alert-->
+                <div class="row" ng-show="alertReg.msg">
+                    <div class="col-lg-12" style="text-align: center;">
+                        <div ng-class="alertReg.class"><span ng-bind="alertReg.msg"></span></div>
+                    </div>
+                </div>
+                <!--END: div for alert-->
+            </form>
+        </div>
+    </div>
+    </div>
+</script>
+<!--End: Modal for reg-->
