--- a/app/views/merchant/edit.html
+++ b/app/views/merchant/edit.html
@@ -73,16 +73,61 @@
                 </div>
             </div>
         </div>
-        <div class="form-group">
-            <label class="col-lg-2 control-label">商户网站</label>
-            <div class="col-lg-6">
-                <div class="input-group">
-                    <input class="form-control" name="url" type="text" ng-model="entity.url">
-                    <span class="input-group-addon"><i class="fa fa-circle-o"></i></span>
+        <div ng-init="initUpload()">
+            <div class="form-group">
+                <label class="col-lg-2 control-label">商户网站</label>
+                <div class="col-lg-6">
+                    <div class="input-group">
+                        <input class="form-control" name="url" type="text" ng-model="entity.url">
+                        <span class="input-group-addon"><i class="fa fa-circle-o"></i></span>
+                    </div>
                 </div>
             </div>
-        </div>
-        <!--END:just use for edit-->
+            <div class="form-group">
+                    <label class="col-lg-2 control-label">商户Logo</label>
+
+                    <div class="col-lg-2">
+                        <input ng-file-select="" type="file" multiple ng-model="none">
+                    </div>
+                    <div class="col-lg-8">
+                        <table class="table">
+                            <tbody>
+                            <tr ng-repeat="item in uploader.queue" class="ng-scope">
+                                <td>
+                                    <strong>{{ item.file.name }}</strong>
+                                    <div ng-show="uploader.isHTML5" ng-thumb="{ file: item.file, height: 100 }"></div>
+                                </td>
+                                <td ng-show="uploader.isHTML5" nowrap>{{ item.file.size/1024/1024|number:2 }} MB</td>
+                                <td ng-show="uploader.isHTML5">
+                                    <div class="progress" style="margin-bottom: 0;">
+                                        <div class="progress-bar" role="progressbar" ng-style="{ 'width': item.progress + '%' }"></div>
+                                    </div>
+                                </td>
+                                <td class="text-center">
+                                    <span ng-show="item.isSuccess"><i class="fa fa-check"></i></span>
+                                    <span ng-show="item.isError"><i class="fa fa-times"></i></span>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+            </div>
+            <div class="form-group">
+                <div class="col-lg-offset-2 col-lg-6" style="text-align: center;">
+                    <div class="alert alert-danger">您可以上传图片作为自家logo,logo文件的大小不能超过2M</div>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-lg-offset-2 col-lg-6">
+                    <button type="button" class="btn btn-success btn-s" ng-click="uploadInEdit()" ng-disabled="!uploader.getNotUploadedItems().length">
+                        <i class="fa fa-cloud-upload"></i>上传
+                    </button>
+                    <button type="button" class="btn btn-danger btn-s" ng-click="uploader.clearQueue()" ng-disabled="!uploader.queue.length">
+                        <span class="fa fa-trash-o"></span>重选
+                    </button>
+                </div>
+            </div>
+            </div>
         <hr>
         <div class="form-group">
             <div class="col-lg-offset-2 col-lg-6">
