--- a/app/views/merchant/edit.html
+++ b/app/views/merchant/edit.html
@@ -8,6 +8,14 @@
 </div>
 <div class="box-content">
     <form class="form-horizontal" role="form" name="editForm">
+        <div class="form-group" style="height: 40px;" ng-init="initErrContent()">
+            <label class="col-lg-2 control-label"></label>
+            <div class="col-lg-6" ng-if="errContent.msg" >
+                <div class="alert alert-danger" style="text-align: center; padding-top: 5px; padding-bottom: 5px;">
+                    <span ng-bind="errContent.msg"></span>
+                </div>
+            </div>
+        </div>
         <div class="form-group">
             <label class="col-lg-2 control-label"></label>
             <span class="help-block"><i class="fa fa-circle"> 标记的项目不能为空</i></span>
@@ -35,24 +43,18 @@
             <label class="col-lg-2 control-label">电话</label>
             <div class="col-lg-6">
                 <div class="input-group">
-                    <input class="form-control" name="telephone" type="text" ng-model="entity.telephone" ng-pattern="patternForTelephone">
+                    <input class="form-control" name="telephone" type="text" ng-model="entity.telephone">
                     <span class="input-group-addon"><i class="fa fa-circle"></i></span>
                 </div>
-            </div>
-            <div class="col-lg-4" ng-if="editForm.telephone.$error.pattern">
-                <span class="label label-warning">电话号码格式不正确！</span>
             </div>
         </div>
         <div class="form-group">
             <label class="col-lg-2 control-label">电子邮箱</label>
             <div class="col-lg-6">
                 <div class="input-group">
-                    <input class="form-control" name="email" type="text" ng-model="entity.email" ng-pattern="patternForEmail">
+                    <input class="form-control" name="email" type="text" ng-model="entity.email">
                     <span class="input-group-addon"><i class="fa fa-circle-o"></i></span>
                 </div>
-            </div>
-            <div class="col-lg-4" ng-if="editForm.email.$error.pattern">
-                <span class="label label-warning">电子邮箱格式不正确！</span>
             </div>
         </div>
         <div class="form-group">
@@ -60,7 +62,7 @@
             <div class="col-lg-6">
                 <div class="input-group">
                     <input class="form-control" name="address" type="text" ng-model="entity.address">
-                    <span class="input-group-addon"><i class="fa fa-circle"></i></span>
+                    <span class="input-group-addon"><i class="fa fa-circle-o"></i></span>
                 </div>
             </div>
         </div>
@@ -73,48 +75,68 @@
                 </div>
             </div>
         </div>
+        <div class="form-group">
+            <label class="col-lg-2 control-label">微信公众号</label>
+            <div class="col-lg-6">
+                <div class="input-group">
+                    <input class="form-control" type="text" ng-model="entity.weixin.originID">
+                    <span class="input-group-addon"><i class="fa fa-circle-o"></i></span>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-lg-2 control-label">商户网站</label>
+            <div class="col-lg-6">
+                <div class="input-group">
+                    <input class="form-control" name="url" type="text" ng-model="entity.url">
+                    <span class="input-group-addon"><i class="fa fa-circle-o"></i></span>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="form-group">
+            <div class="col-lg-offset-2 col-lg-6">
+                <button ng-click="edit(entity)" class="btn btn-primary btn-lg"
+                        ng-if="!!entity.id"><i class="fa fa-save fa-lg"></i> 保存
+                </button>
+                <button ng-click="cancel()" class="btn btn-warning btn-lg"><i class="fa fa-arrows-alt fa-lg"></i> 取消
+                </button>
+            </div>
+        </div>
+        <hr/>
         <div ng-init="initUpload()">
             <div class="form-group">
-                <label class="col-lg-2 control-label">商户网站</label>
-                <div class="col-lg-6">
-                    <div class="input-group">
-                        <input class="form-control" name="url" type="text" ng-model="entity.url">
-                        <span class="input-group-addon"><i class="fa fa-circle-o"></i></span>
-                    </div>
+                <label class="col-lg-2 control-label">商户Logo</label>
+
+                <div class="col-lg-2">
+                    <input ng-file-select="" type="file" multiple ng-model="none">
+                </div>
+                <div class="col-lg-8">
+                    <table class="table">
+                        <tbody>
+                        <tr ng-repeat="item in uploader.queue" class="ng-scope">
+                            <td>
+                                <strong>{{ item.file.name }}</strong>
+                                <div ng-show="uploader.isHTML5" ng-thumb="{ file: item.file, height: 100 }"></div>
+                            </td>
+                            <td ng-show="uploader.isHTML5" nowrap>{{ item.file.size/1024/1024|number:2 }} MB</td>
+                            <td ng-show="uploader.isHTML5">
+                                <div class="progress" style="margin-bottom: 0;">
+                                    <div class="progress-bar" role="progressbar" ng-style="{ 'width': item.progress + '%' }"></div>
+                                </div>
+                            </td>
+                            <td class="text-center">
+                                <span ng-show="item.isSuccess"><i class="fa fa-check"></i></span>
+                                <span ng-show="item.isError"><i class="fa fa-times"></i></span>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
             <div class="form-group">
-                    <label class="col-lg-2 control-label">商户Logo</label>
-
-                    <div class="col-lg-2">
-                        <input ng-file-select="" type="file" multiple ng-model="none">
-                    </div>
-                    <div class="col-lg-8">
-                        <table class="table">
-                            <tbody>
-                            <tr ng-repeat="item in uploader.queue" class="ng-scope">
-                                <td>
-                                    <strong>{{ item.file.name }}</strong>
-                                    <div ng-show="uploader.isHTML5" ng-thumb="{ file: item.file, height: 100 }"></div>
-                                </td>
-                                <td ng-show="uploader.isHTML5" nowrap>{{ item.file.size/1024/1024|number:2 }} MB</td>
-                                <td ng-show="uploader.isHTML5">
-                                    <div class="progress" style="margin-bottom: 0;">
-                                        <div class="progress-bar" role="progressbar" ng-style="{ 'width': item.progress + '%' }"></div>
-                                    </div>
-                                </td>
-                                <td class="text-center">
-                                    <span ng-show="item.isSuccess"><i class="fa fa-check"></i></span>
-                                    <span ng-show="item.isError"><i class="fa fa-times"></i></span>
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
-            </div>
-            <div class="form-group">
                 <div class="col-lg-offset-2 col-lg-6" style="text-align: center;">
-                    <div class="alert alert-danger">您可以上传图片作为自家logo,logo文件的大小不能超过2M</div>
+                    <div class="alert alert-danger">您可以上传一张图片作为自家logo,logo文件的大小不能超过2M</div>
                 </div>
             </div>
             <div class="form-group">
@@ -126,16 +148,6 @@
                         <span class="fa fa-trash-o"></span>重选
                     </button>
                 </div>
-            </div>
-            </div>
-        <hr>
-        <div class="form-group">
-            <div class="col-lg-offset-2 col-lg-6">
-                <button ng-disabled="editForm.$invalid" ng-click="update(entity)" class="btn btn-primary btn-lg"
-                        ng-if="!!entity.id"><i class="fa fa-save fa-lg"></i> 保存
-                </button>
-                <button ng-click="cancelEdit()" class="btn btn-warning btn-lg"><i class="fa fa-arrows-alt fa-lg"></i> 取消
-                </button>
             </div>
         </div>
     </form>
