--- a/app/views/merchant/profile.html
+++ b/app/views/merchant/profile.html
@@ -9,15 +9,14 @@
     <div class="col-xs-6"></div>
     <div class="col-xs-2">
       <div class="box-icon">
-        <a ng-click="showCreate()" class="btn-puls" ng-hide="isHide"><i class="fa fa-plus"/></a>
-        <a ng-click="refreshList()" class="btn-refresh"><i class="fa fa-refresh"/></a>
+        <a ng-click="showCreate()" class="btn-puls" title="新增商户"><i class="fa fa-plus"/></a>
       </div>
     </div>
   </div>
 </div>
 <div class="box-content">
   	<div class="col-lg-12">
-  		<a ng-repeat="shortcut in profileShortcuts" ng-class="shortcut.class" ng-click="editMerchant(currentMerchant.merchant)">
+  		<a ng-repeat="shortcut in profileShortcuts" ng-class="shortcut.class" ng-click="showEdit(currentMerchant.merchant)">
   			<i ng-class="shortcut.icon" />
   			<p>{{shortcut.text}}</p>
   		</a>
