--- a/app/views/item/create.html
+++ b/app/views/item/create.html
@@ -99,6 +99,9 @@
                     <button type="button" class="btn btn-success btn-s" ng-click="uploadInCreate()" ng-disabled="!uploader.getNotUploadedItems().length">
                         <i class="fa fa-cloud-upload"></i>上传
                     </button>
+                    <button type="button" class="btn btn-danger btn-s" ng-click="uploader.clearQueue()" ng-disabled="!uploader.queue.length">
+                        <span class="fa fa-trash-o"></span>重选
+                    </button>
                 </div>
 
             </div>
